--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     name: "test"
     runs-on: ubuntu-latest
     steps:
-      - name: test
+      - name: null
         env:
           TEST: 1
          # language=bash
