--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: test
         env:
-          TEST: null
+          TEST: 1
          # language=bash
         run: |
           echo "$ENV"
